// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aircraft draws_id_matrix assume_friend 1`] = `
<canvas
  data-snapshot-image="0ded83a754fcef5d6562b59ec6aea31100a9efa9906c6f2e03661d25b4cb49407f55db5d08ceb10b81f9c091ce2d40967780a615d88c5f74b859ee8391153a45"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix hostile 1`] = `
<canvas
  data-snapshot-image="6520214f0eb039147484158d7326d1508326c20d899dabaeaac0237891a7e9903b9da1de32b59d8bac1164a9877ed1ace4b4d03644349e037d62a284b83f6fb1"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix neutral 1`] = `
<canvas
  data-snapshot-image="9fc76887b7a6fcb99f802a02eab2335ce42b1b48e3e406b48ce0396a411470db3186c2169c3c30c79ad575bcea5aad0b0daa42eb42f85798c9e9dd4b6b11e357"
  height="30"
  width="10"
/>
`;

exports[`Aircraft draws_id_matrix suspect 1`] = `
<canvas
  data-snapshot-image="884a6c7d2e58dd5a48c8d5ed3b1da69ab8029d27c61575703db183df080246c5aeea05230edc89f5f0f61f047a4be693ff311974177db5740382099cd87f27a7"
  height="30"
  width="10"
/>
`;
